| Bug #65061 | LRU flush rate calculation is based on invalid values | ||
|---|---|---|---|
| Submitted: | 20 Apr 2012 23:12 | Modified: | 11 May 2012 19:09 |
| Reporter: | Davi Arnaut (OCA) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB storage engine | Severity: | S2 (Serious) |
| Version: | 5.5.20, 5.5.22,5.6.6-m9 | OS: | Any |
| Assigned to: | CPU Architecture: | Any | |
| Tags: | Contribution, innodb_adaptive_flushing | ||
[20 Apr 2012 23:12]
Davi Arnaut
[23 Apr 2012 13:45]
Valeriy Kravchuk
Thank you for the problem report.
[11 May 2012 19:09]
John Russell
Added to changelog for 5.5.25, 5.6.6: Improved the algorithm related to adaptive flushing. This fix increases the rate of flushing in cases where compression is used and the data set is larger than the buffer pool, leading to eviction.
