storage/innobase/buf/buf0flu.c
@@ -1577,11 +1577,6 @@ buf_flush_LRU_list_batch(
 		}
 	} while (bpage != NULL && count < max);
 
-	/* We keep track of all flushes happening as part of LRU
-	flush. When estimating the desired rate at which flush_list
-	should be flushed, we factor in this value. */
-	buf_lru_flush_page_count += count;
-
 	ut_ad(buf_pool_mutex_own(buf_pool));
 
 	return(count);
